--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -115,14 +115,14 @@
                     <a href="#basic">Basic Template</a>
                 </li>
                 <li>
-                    <a href="#basic_side_nav_with_tabs">Dashboard Template</a>
+                    <a href="#basic_side_nav_with_tabs">Dashboard</a>
                 </li>
                 <li>
-                    <a href="#basic_side_nav_tabs">Tabs & Side-Nav Template</a>
+                    <a href="#basic_side_nav_tabs">Tabs & Side-Nav</a>
                 </li>
 
                 <li>
-                    <a href="#basic_parallax">Parallax Template</a>
+                    <a href="#basic_parallax">Parallax</a>
                 </li>
             </ul>
         </div>
