--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -122,7 +122,7 @@
                 </li>
 
                 <li>
-                    <a href="#basic_parallax">Parallax</a>
+                    <a href="#basic_parallax">Parallax Template</a>
                 </li>
             </ul>
         </div>
