--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -348,7 +348,8 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <div class="col s12 m3">
                         <pre><code class='r'>
 material_card(
- title = "Miles Per Gallon Density",
+ title = 
+   "Miles Per Gallon Density",
  plotOutput("mpg_density")
 )
         </code></pre>
