--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1011,12 +1011,11 @@ library(shinymaterial)
                         </div>
                     </li>
                     <li class="collection-item">
-                        <!--<h5>Function Updates</h5>
+                        <h5>Function Updates</h5>
                         <div class='my-code'>material_page()</div>
                         <div class='my-code-black'>
                             include_fonts
-                        </div>-->
-                        None
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
