--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1012,6 +1012,7 @@ library(shinymaterial)
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
                         <div class='my-code'>material_page()</div>
                         <div class='my-code-black'>
                             include_fonts
