--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -86,17 +86,19 @@
     </ul>
     <div class="col s12" id="about">
         <div class="row">
-            <div class="col s6 offset-s3">
+            <div class="col s8 offset-s2">
                 <br/>
 
                 <div class="card">
                     <div class="card-content">
-                        <h5 style="line-height:138%">
-                            <span class='my-code' style='color:#e57373 '><a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h5>
+                        <h4 style="line-height:138%">
+                            <span class='my-code' style='color:#e57373 '><a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
 
                         <br/>
-                        <div class="center-align">
-                            <img width="100%" src="https://i.ytimg.com/vi/rrT6v5sOwJg/maxresdefault.jpg" />
+                        <div class="">
+                            <img width="57%" style="margin-right:20px" src="img/materialLogo.jpg" />
+                            <!--<img width="15%" style="margin-bottom:40px" src="img/plusSign.jpeg" />-->
+                            <img width="29%" style="margin-left:35px" src="img/shinyLogo.png" />
                         </div>
                     </div>
                 </div>
