--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -89,11 +89,11 @@
             <div class="col s8 offset-s2">
                 <br/>
 
-                <div class="card">
+                <div class="card z-depth-3">
                     <div class="card-content">
-                        <h4 style="line-height:138%">
-                            <span class='my-code' style='color:#e57373 '><a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></span> is an R package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps </h4>
-
+                        <span class="card-title">shinymaterial</span>
+                        <h4 style="line-height:110%">
+                            Implement <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps</h4>
                         <br/>
                         <div class="">
                             <img width="57%" style="margin-right:20px" src="img/materialLogo.jpg" />
