--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -11,7 +11,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shinymaterial</title>
-    <link rel="icon" href="img/favicomatic/favicon-16x16.png" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="highlight_r/styles/tomorrow-night-eighties.css">
     <style>
