--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -999,7 +999,7 @@ library(shinymaterial)
                         <div class='my-code'>devtools::install_github("ericrayanderson/shinymaterial")</div>
                     </li>
                     <li class="collection-item">
-                        <h5>Date</h5>Ongoing</li>
+                        <h5>Date</h5>12.15.2017</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
