--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -992,7 +992,7 @@ library(shinymaterial)
             </div>
 
             <div class="col s12 m6">
-                <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>GitHub</h1>
+                <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>Development</h1>
                 <ul class="collection with-header">
                     <li class="collection-item">
                         <h5>Install</h5>
