--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -87,7 +87,7 @@
     </ul>
     <div class="col s12" id="about">
         <div class="row">
-            <div class="col s8 offset-s2">
+            <div class="col s12 m8 offset-m2">
                 <br/>
                 <br/>
                 <div class="card z-depth-3">
@@ -96,10 +96,15 @@
                         <h4 style="line-height:110%">
                             Implement <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps</h4>
                         <br/>
-                        <div class="">
-                            <img width="57%" style="margin-right:20px" src="img/materialLogo.jpg" />
-                            <!--<img width="15%" style="margin-bottom:40px" src="img/plusSign.jpeg" />-->
-                            <img width="27%" style="margin-left:55px" src="img/shinyLogo.png" />
+                        <div class="row">
+                            <div class="col s12 m7">
+                                <img width="100%" src="img/materialLogo.jpg" />
+                            </div>
+
+                            <div class="col s12 m4 offset-m1">
+                                <img width="82%" style="" src="img/shinyLogo.png" />
+                                <div style="display:block;font-size:10px;font-style:italic" class="right-align">RStudio and Shiny are trademarks of RStudio, Inc</div>
+                            </div>
                         </div>
                     </div>
                 </div>
