--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -102,8 +102,8 @@
                             </div>
 
                             <div class="col s12 m4 offset-m1">
-                                <img width="82%" style="" src="img/shinyLogo.png" />
-                                <div style="display:block;font-size:10px;font-style:italic" class="right-align">RStudio and Shiny are trademarks of RStudio, Inc</div>
+                                <img width="83%" style="" src="img/shinyLogo.png" />
+                                <div style="display:block;font-size:10px;font-style:italic" class="left-align">RStudio and Shiny are trademarks of RStudio, Inc</div>
                             </div>
                         </div>
                     </div>
