--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -60,7 +60,7 @@
 <body class="grey lighten-4">
     <nav>
         <div class="nav-wrapper teal">
-            <div href="javascript:void(0)" class="brand-logo">&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial v0.4.1</a></div>
+            <div href="javascript:void(0)" class="brand-logo">&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></div>
             <div href="javascript:void(0)" class="brand-logo right">
                 <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
                     <img style=' color: white' src='img/GitHub-Mark-Light-32px.png'>&nbsp;
