--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -56,16 +56,18 @@
 
 
 <body class="grey lighten-4">
-    <nav>
-        <div class="nav-wrapper teal">
-            <div href="javascript:void(0)" class="brand-logo">&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></div>
-            <div href="javascript:void(0)" class="brand-logo right">
-                <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper teal">
+                <!--<div href="javascript:void(0)" class="brand-logo">&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank"></a></div>-->
+                <div href="javascript:void(0)" class="brand-logo right">
+                    <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
                     <img style=' color: white' src='img/GitHub-Mark-Light-32px.png'>&nbsp;
                 </a>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
     <ul class="tabs tabs-fixed-width">
         <li class="tab">
             <a href="#about">About</a>
@@ -87,12 +89,13 @@
         <div class="row">
             <div class="col s12 m8 offset-m2">
                 <br/>
-                <br/>
+
                 <div class="card z-depth-3">
                     <div class="card-content">
-                        <span class="card-title">shinymaterial</span>
-                        <h4 style="line-height:110%">
-                            Implement <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps</h4>
+                        <span class="card-title" style="font-size: 40px">shinymaterial</span>
+                        <h5 style="line-height:110%">
+                            <br> Implement <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps
+                        </h5>
                         <br/>
                         <div class="row">
                             <div class="col s12 m7">
