--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1017,7 +1017,7 @@ library(shinymaterial)
                         <i>New parameters</i><br>
                         <div class='my-code'>material_page()</div>
                         <div class='my-code-black'>
-                            include_fonts
+                            nav_bar_fixed <br> include_fonts
                         </div>
                     </li>
                     <li class="collection-item">
