--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -59,7 +59,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper teal">
-                <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank"></a></div>
+                <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></div>
                 <div href="javascript:void(0)" class="brand-logo right">
                     <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
                     <img style=' color: white' src='img/GitHub-Mark-Light-32px.png'>&nbsp;
