--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -5,7 +5,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+    <link rel="stylesheet" href="css/materialize.min.css">
 
 
     <!--Let browser know website is optimized for mobile-->
@@ -92,10 +92,10 @@
 
                 <div class="card z-depth-3">
                     <div class="card-content">
-                        <span class="card-title" style="font-size: 40px">shinymaterial</span>
-                        <h5 style="line-height:110%">
-                            <br> Implement <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps
-                        </h5>
+                        <!--<span class="card-title" style="font-size: 33px">shinymaterial</span>-->
+                        <h4 style="line-height:110%">
+                            <a href='https://material.io/guidelines/' target='_blank'>Material </a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps
+                        </h4>
                         <br/>
                         <div class="row">
                             <div class="col s12 m7">
@@ -1029,7 +1029,7 @@ library(shinymaterial)
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+    <script src="js/materialize.min.js"></script>
     <script src="highlight_r/highlight.pack.js"></script>
     <script>
         $(document).ready(function() {
