--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -186,6 +186,7 @@ library(shinymaterial)
 # Wrap shinymaterial apps in material_page
 ui <- material_page(
   title = "Basic Page + Side-Nav with Tabs",
+  nav_bar_fixed = TRUE,
   # Place side-nav in the beginning of the UI
   material_side_nav(
     fixed = TRUE,
