--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -892,6 +892,34 @@ library(shinymaterial)
 
                 <ul class="collection">
                     <li class="collection-item">
+                        <h5>Version</h5>0.5.0</li>
+                    <li class="collection-item">
+                        <h5>Date</h5>12.17.2017</li>
+                    <li class="collection-item">
+                        <h5>New Functions</h5>
+                        <div class='my-code'>
+                            material_file_input() <br> material_spinner_hide() <br> material_spinner_show() <br> update_material_checkbox() <br> update_material_date_picker <br> update_material_dropdown() <br> update_material_number_box() <br> update_material_password_box() <br> update_material_radio_button() <br> update_material_slider() <br>update_material_switch() <br> update_material_text_box()
+                        </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                        <div class='my-code'>material_page()</div>
+                        <div class='my-code-black'>
+                            include_fonts, nav_bar_fixed
+                        </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v0.99.0</li>
+                </ul>
+
+
+
+
+
+
+                <ul class="collection">
+                    <li class="collection-item">
                         <h5>Version</h5>0.4.1</li>
                     <li class="collection-item">
                         <h5>Date</h5>10.28.2017</li>
@@ -1006,20 +1034,17 @@ library(shinymaterial)
                         <div class='my-code'>devtools::install_github("ericrayanderson/shinymaterial")</div>
                     </li>
                     <li class="collection-item">
-                        <h5>Date</h5>12.15.2017</li>
+                        <h5>Date</h5>On going</li>
                     <li class="collection-item">
                         <h5>New Functions</h5>
-                        <div class='my-code'>
-                            material_file_input() <br> material_spinner_hide() <br> material_spinner_show() <br> update_material_checkbox() <br> update_material_date_picker <br> update_material_dropdown() <br> update_material_number_box() <br> update_material_password_box() <br> update_material_radio_button() <br> update_material_slider() <br>update_material_switch() <br> update_material_text_box()
-                        </div>
+
+                        None
+
+
                     </li>
                     <li class="collection-item">
                         <h5>Function Updates</h5>
-                        <i>New parameters</i><br>
-                        <div class='my-code'>material_page()</div>
-                        <div class='my-code-black'>
-                            include_fonts, nav_bar_fixed
-                        </div>
+                        None
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
