--- a/testing/index.html
+++ b/testing/index.html
@@ -652,9 +652,9 @@
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
 window.onload = function () {
-    var startingTab = "#cfp"
-    if (window.location.href.includes(startingTab)) {
-        startingTabLink = document.querySelector("a[href='" + startingTab + "']").click();
+    var afterHastag = window.location.href.match('[^#]*$');
+    if (afterHastag.index != 0) {
+        startingTabLink = document.querySelector("a[href='#" + afterHastag + "']").click();
     }
 }
 </script>
