--- a/testing/index.html
+++ b/testing/index.html
@@ -652,12 +652,14 @@
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
 window.onload = function () {
-  window.setTimeout(function() {
     var afterHastag = window.location.href.match('[^#]*$');
     if (afterHastag.index != 0) {
         startingTabLink = document.querySelector("a[href='#" + afterHastag + "']").click();
+        
+        window.setTimeout(function() {
+    window.scrollTo(0,0);
+}, 0);
     }
-}, 0)
 }
 </script>
   </body>
