--- a/testing/index.html
+++ b/testing/index.html
@@ -652,15 +652,12 @@
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
 window.onload = function () {
+  setTimeout(function(){
     var afterHastag = window.location.href.match('[^#]*$');
     if (afterHastag.index != 0) {
-        startingTabLink = document.querySelector("a[href='#" + afterHastag + "']").click();
-        
-        window.setTimeout(function() {
-    window.scrollTo(0,0);
-}, 0);
+        document.querySelector("a[href='#" + afterHastag + "']").click();
     }
-}
+}, 200);
 </script>
   </body>
 </html>
