--- a/testing/index.html
+++ b/testing/index.html
@@ -652,12 +652,11 @@
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
 window.onload = function () {
-  setTimeout(function(){
-    var afterHastag = window.location.href.match('[^#]*$');
-    if (afterHastag.index != 0) {
-        document.querySelector("a[href='#" + afterHastag + "']").click();
-    }
-}, 200);
+    //var afterHastag = window.location.href.match('[^#]*$');
+    //if (afterHastag.index != 0) {
+    //    document.querySelector("a[href='#" + afterHastag + "']").click();
+    //}
+    $(".mdl-layout__tab:eq(1) span").click ();
 }
 </script>
   </body>
