--- a/testing/index.html
+++ b/testing/index.html
@@ -654,7 +654,7 @@
 window.onload = function () {
     var afterHastag = window.location.href.match('[^#]*$');
     if (afterHastag.index != 0) {
-        document.querySelector("a[href='#" + afterHastag + "']").getElementsByTagName('span')[0].click();
+        document.querySelector("a[href='#" + afterHastag + "']").click();
     }
 }
 </script>
