--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -878,6 +878,14 @@ library(shinymaterial)
                     </div>
                 </div>
             </div>
+            <div class="col s4">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title teal-text">Cryptocurrency</span>
+                        <a href="https://ericrayanderson.shinyapps.io/shinymaterial_crypto" target="_blank"><img src="img/shinymaterial_crypto.png" width="100%"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
