--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -852,7 +852,7 @@ library(shinymaterial)
     <div class="col s12" id="showcase">
         <br>
         <div class="row">
-            <div class="col s4 offset-s2">
+            <div class="col m4 offset-m2 s12">
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title teal-text">Basic App</span>
@@ -860,7 +860,7 @@ library(shinymaterial)
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col m4 s12">
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title teal-text">Dashboard</span>
@@ -870,7 +870,7 @@ library(shinymaterial)
             </div>
         </div>
         <div class="row">
-            <div class="col s4 offset-s2">
+            <div class="col m4 offset-m2 s12">
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title teal-text">Parallax</span>
@@ -878,7 +878,7 @@ library(shinymaterial)
                     </div>
                 </div>
             </div>
-            <div class="col s4">
+            <div class="col m4 s12">
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title teal-text">Cryptocurrency</span>
