--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -113,7 +113,7 @@
         </div>
     </div>
     <div class="col s12" id="usage">
-        <div class="toc-wrapper pinned">
+        <div class="toc-wrapper pinned hide-on-small-only">
             <ul class="section table-of-contents">
 
                 <li>
@@ -137,7 +137,7 @@
         </div>
 
         <div class='row'>
-            <div class='col s9 offset-s2'>
+            <div class='col s12 m9 offset-m2 truncate'>
                 <div id="installation" class="section scrollspy">
 
                     <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Installation</h2>
@@ -305,11 +305,11 @@ shinyApp(ui = ui, server = server)</code></pre>
             </div>
         </div>
     </div>
-    <div class="col s12 m12" id="features">
+    <div class="col s12 m12 truncate" id="features">
         <div class="row">
 
 
-            <div class="toc-wrapper pinned">
+            <div class="toc-wrapper pinned hide-on-small-only">
                 <ul class="section table-of-contents">
                     <li>
                         <a href="#features_cards">Cards</a>
