--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -900,6 +900,33 @@ library(shinymaterial)
 
 
 
+                <ul class="collection">
+                    <li class="collection-item">
+                        <h5>Version</h5>0.5.3</li>
+                    <li class="collection-item">
+                        <h5>Date</h5>6.2.2018</li>
+                    <li class="collection-item">
+                        <h5>New Functions</h5>
+                        <div class='my-code'>
+                            open_material_modal() <br> side_nav_tabs_info()
+                        </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                        <div class='my-code'>material_modal()</div>
+                        <div class='my-code-black'>
+                            close_button_label, display_button
+                        </div>
+                          <div class='my-code'>material_page()</div>
+                        <div class='my-code-black'>
+                            include_nav_bar
+                        </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v0.99.0</li>
+                </ul>
+
 
                 <ul class="collection">
                     <li class="collection-item">
