--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -34,20 +34,20 @@
         }
 
         .tabs .tab a {
-            color: #009688
+            color: #3f51b5
         }
 
         .tab a.active {
-            color: #009688 !important;
+            color: #3f51b5 !important;
         }
 
         .tab a.hover {
-            color: #009688 !important;
+            color: #3f51b5 !important;
         }
 
         .tabs .indicator {
             height: 3px;
-            background-color: #009688;
+            background-color: #3f51b5;
         }
 
     </style>
@@ -57,7 +57,7 @@
 <body class="grey lighten-4">
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper teal">
+            <div class="nav-wrapper indigo">
                 <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></div>
                 <div href="javascript:void(0)" class="brand-logo right">
                     <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
@@ -576,10 +576,10 @@ material_card(
                                 <button class="waves-effect waves-light btn pink" id="example_button" value="0">pink</button>
                             </div>
                             <div class="col s12 m2">
-                                <button class="waves-effect waves-light btn purple" id="example_button" value="0">purple</button>
+                                <button class="waves-effect waves-light btn indigo" id="example_button" value="0">indigo</button>
                             </div>
                             <div class="col s12 m3">
-                                <button class="waves-effect waves-light btn deep-purple" id="example_button" value="0">deep_purple</button>
+                                <button class="waves-effect waves-light btn deep-indigo" id="example_button" value="0">deep_indigo</button>
                             </div>
                             <div class="col s12 m2">
                                 <button class="waves-effect waves-light btn indigo" id="example_button" value="0">indigo</button>
@@ -594,7 +594,7 @@ material_card(
                                 <button class="waves-effect waves-light btn cyan" id="example_button" value="0">cyan</button>
                             </div>
                             <div class="col s12 m2">
-                                <button class="waves-effect waves-light btn teal" id="example_button" value="0">teal</button>
+                                <button class="waves-effect waves-light btn indigo" id="example_button" value="0">indigo</button>
                             </div>
                             <div class="col s12 m2">
                                 <button class="waves-effect waves-light btn green" id="example_button" value="0">green</button>
@@ -605,7 +605,7 @@ material_card(
                         </div>
                         <div class="row">
                             <div class="col s12 m2">
-                                <button class="waves-effect waves-light btn lime" id="example_button" value="0">lime</button>
+                                <button class="waves-effect waves-light btn indigo" id="example_button" value="0">indigo</button>
                             </div>
 
                             <div class="col s12 m2">
@@ -855,7 +855,7 @@ library(shinymaterial)
             <div class="col m4 offset-m2 s12">
          <div class="card">
                     <div class="card-content">
-                        <span class="card-title teal-text">Dashboard</span>
+                        <span class="card-title indigo-text">Dashboard</span>
                         <a href="https://ericrayanderson.shinyapps.io/shinymaterial_dashboard" target="_blank"><img src="img/shinymaterial_dashboard.png" width="100%"></a>
                     </div>
                 </div>
@@ -864,7 +864,7 @@ library(shinymaterial)
                
                         <div class="card">
                     <div class="card-content">
-                        <span class="card-title teal-text">Basic App</span>
+                        <span class="card-title indigo-text">Basic App</span>
                         <a href="https://ericrayanderson.shinyapps.io/shinymaterial_showcase" target="_blank"><img src="img/example_app2.png" width="100%"></a>
                     </div>
                 </div>
@@ -874,7 +874,7 @@ library(shinymaterial)
             <div class="col m4 offset-m2 s12">
                    <div class="card">
                     <div class="card-content">
-                        <span class="card-title teal-text">Parallax</span>
+                        <span class="card-title indigo-text">Parallax</span>
                         <a href="https://ericrayanderson.shinyapps.io/shinymaterial_parallax" target="_blank"><img src="img/parallaxSS.png" width="100%"></a>
                     </div>
                 </div>
@@ -883,7 +883,7 @@ library(shinymaterial)
            <!-- <div class="col m4 s12">
                       <div class="card">
                     <div class="card-content">
-                        <span class="card-title teal-text">Cryptocurrency</span>
+                        <span class="card-title indigo-text">Cryptocurrency</span>
                         <a href="https://ericrayanderson.shinyapps.io/shinymaterial_crypto" target="_blank"><img src="img/shinymaterial_crypto.png" width="100%"></a>
                     </div>
                 </div>
