--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -880,7 +880,7 @@ library(shinymaterial)
                 </div>
         
             </div>
-           <!-- <div class="col m4 s12">
+           <div class="col m4 s12">
                       <div class="card">
                     <div class="card-content">
                         <span class="card-title indigo-text">Cryptocurrency</span>
@@ -888,7 +888,7 @@ library(shinymaterial)
                     </div>
                 </div>
                
-            </div> -->
+            </div> 
         </div>
     </div>
 
