--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -875,7 +875,7 @@ library(shinymaterial)
                    <div class="card">
                     <div class="card-content">
                         <span class="card-title indigo-text">Parallax</span>
-                        <a href="https://ericrayanderson.shinyapps.io/shinymaterial_parallax" target="_blank"><img src="img/parallaxSS.png" width="100%"></a>
+                        <a href="https://ericrayanderson.github.io/shinymaterial_parallax/" target="_blank"><img src="img/parallaxSS.png" width="100%"></a>
                     </div>
                 </div>
         
