--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -865,7 +865,7 @@ library(shinymaterial)
                         <div class="card">
                     <div class="card-content">
                         <span class="card-title indigo-text">Basic App</span>
-                        <a href="https://ericrayanderson.shinyapps.io/shinymaterial_showcase" target="_blank"><img src="img/example_app2.png" width="100%"></a>
+                        <a href="https://ericrayanderson.github.io/shinymaterial_showcase/" target="_blank"><img src="img/example_app2.png" width="100%"></a>
                     </div>
                 </div>
             </div>
