--- a/shinymaterial_showcase/index.html
+++ b/shinymaterial_showcase/index.html
@@ -198,7 +198,7 @@ select[name$=_length] {
           <div class="card z-depth-4">
             <div class="card-content">
               <span class="card-title">Power vs Efficiency</span>
-              <div id="mtcars_plot" class="" style="width: 100% ; height: 400px"><img id = "my_img" class="responsive-img" src="app_files/isLight1isCyl1getTrend0.png" width="1010" height="400"></div>
+              <div id="mtcars_plot" class="" ><img id = "my_img" class="responsive-img" src="app_files/isLight1isCyl1getTrend0.png" ></div>
             </div>
           </div>
         </div>
