--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1082,8 +1082,17 @@ library(shinymaterial)
 
                     </li>
                     <li class="collection-item">
-                        <h5>Function Updates</h5>
-                        None
+                      <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                          <div class='my-code'>material_number_box()</div>
+                        <div class='my-code-black'>
+                            step_size
+                        </div>
+                        <br>
+                          <div class='my-code'>material_slider()</div>
+                        <div class='my-code-black'>
+                            step_size
+                        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
