--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -898,7 +898,36 @@ library(shinymaterial)
             <div class="col s12 m6">
                 <h1 class='my-code' style='font-size:75px;color:black;font-weight:500'>CRAN</h1>
 
-
+                <ul class="collection">
+                    <li class="collection-item">
+                        <h5>Version</h5>0.5.4</li>
+                    <li class="collection-item">
+                        <h5>Date</h5>2.2.2019</li>
+                    <li class="collection-item">
+                        <h5>New Functions</h5>
+                        None
+                    </li>
+                    <li class="collection-item">
+                        <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                                <div class='my-code'>material_card()</div>
+            <div class='my-code-black'>
+                color, divider
+            </div>
+            <br>
+                       <div class='my-code'>material_number_box()</div>
+    <div class='my-code-black'>
+        step_size
+    </div>
+        <br>
+        <div class='my-code'>material_slider()</div>
+            <div class='my-code-black'>
+                step_size
+            </div>
+                    </li>
+                    <li class="collection-item">
+                        <h5>Materialize</h5>v0.99.0</li>
+                </ul>
 
                 <ul class="collection">
                     <li class="collection-item">
@@ -908,7 +937,7 @@ library(shinymaterial)
                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
-                            open_material_modal() <br> side_nav_tabs_info()
+                            None
                         </div>
                     </li>
                     <li class="collection-item">
@@ -1082,17 +1111,8 @@ library(shinymaterial)
 
                     </li>
                     <li class="collection-item">
-                      <h5>Function Updates</h5>
-                        <i>New parameters</i><br>
-                          <div class='my-code'>material_number_box()</div>
-                        <div class='my-code-black'>
-                            step_size
-                        </div>
-                        <br>
-                          <div class='my-code'>material_slider()</div>
-                        <div class='my-code-black'>
-                            step_size
-                        </div>
+                        <h5>Function Updates</h5>
+                        None
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
