--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -835,7 +835,7 @@ library(shinymaterial)
                         <div class="container">
                             <div class='my-code'>
 
-                              <br> open_material_modal() <br> side_nav_tabs_info() <br> update_material_checkbox() <br> update_material_date_picker() <br> update_material_dropdown() <br> update_material_number_box() <br> update_material_password_box() <br> update_material_radio_button() <br> update_material_slider() <br>update_material_switch() <br> update_material_text_box()
+                              <br> close_material_modal() <br> open_material_modal() <br> side_nav_tabs_info() <br> update_material_button() <br> update_material_checkbox() <br> update_material_date_picker() <br> update_material_dropdown() <br> update_material_number_box() <br> update_material_password_box() <br> update_material_radio_button() <br> update_material_slider() <br>update_material_switch() <br> update_material_text_box()
                                 <br>
                                 <br>
                             </div>
