--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1135,16 +1135,20 @@ library(shinymaterial)
                     </li>
                     <li class="collection-item">
                         <h5>Date</h5>On going</li>
-                    <li class="collection-item">
+                                    <li class="collection-item">
                         <h5>New Functions</h5>
-
-                        None
-
-
+                        <div class='my-code'>
+                            select_material_tab() 
+                        </div>
                     </li>
                     <li class="collection-item">
-                        <h5>Function Updates</h5>
-                        None
+                                <h5>Function Updates</h5>
+                        <i>New parameters</i><br>
+                        <div class='my-code'>material_text_box()</div>
+                        <div class='my-code-black'>
+                            icon
+                        </div>
+                     
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.99.0</li>
