--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1138,7 +1138,7 @@ library(shinymaterial)
                                     <li class="collection-item">
                         <h5>New Functions</h5>
                         <div class='my-code'>
-                            select_material_tab() 
+                            material_collapsible() <br> material_collapsible_item() <br> select_material_tab()
                         </div>
                     </li>
                     <li class="collection-item">
