--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1131,7 +1131,7 @@ library(shinymaterial)
                 <ul class="collection with-header">
                     <li class="collection-item">
                         <h5>Install</h5>
-                        <div class='my-code'>devtools::install_github("ericrayanderson/shinymaterial", ref = "v1.0.0")</div>
+                        <div class='my-code'>devtools::install_github("ericrayanderson/shinymaterial")</div>
                     </li>
                     <li class="collection-item">
                         <h5>Date</h5>On going</li>
