--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -661,7 +661,7 @@ material_card(
             <div class="row">
                 <div class="col s12 m2 offset-m2">
                     <div class="">
-                        <button data-target="example_modal" class="waves-effect waves-light shiny-material-modal-trigger btn" style="">
+                        <button data-target="example_modal" class="waves-effect waves-light shiny-material-modal-trigger btn modal-trigger" style="">
               <i class="material-icons left">open_in_browser</i>
               Modal
             </button>
