--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -143,7 +143,7 @@
                     <div class="card">
                         <br>
                         <h6>
-                            <div class='my-code' style='font-size:18px'>&nbsp;CRAN:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;install.packages(shinymaterial)</div>
+                            <div class='my-code' style='font-size:18px'>&nbsp;CRAN:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;install.packages("shinymaterial")</div>
                         </h6>
 
                         <h6>
