--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -147,7 +147,7 @@
                         </h6>
 
                         <h6>
-                            <div class='my-code' style='font-size:18px'>&nbsp;DEVELOPMENT:&nbsp;&nbsp;&nbsp;devtools::install_github("ericrayanderson/shinymaterial")</div>
+                            <div class='my-code' style='font-size:18px'>&nbsp;DEVELOPMENT:&nbsp;&nbsp;&nbsp;remotes::install_github("ericrayanderson/shinymaterial")</div>
                         </h6>
                         <br>
                     </div>
@@ -1156,7 +1156,7 @@ library(shinymaterial)
                 <ul class="collection with-header">
                     <li class="collection-item">
                         <h5>Install</h5>
-                        <div class='my-code'>devtools::install_github("ericrayanderson/shinymaterial")</div>
+                        <div class='my-code'>remotes::install_github("ericrayanderson/shinymaterial")</div>
                     </li>
                     <li class="collection-item">
                         <h5>Date</h5>On going</li>
@@ -1166,7 +1166,11 @@ library(shinymaterial)
                     </li>
                     <li class="collection-item">
                                 <h5>Function Updates</h5>
-                        None
+                          <i>New parameters</i><br>
+    <div class='my-code'>material_page()</div>
+        <div class='my-code-black'>
+            primary_theme_color, secondary_theme_color
+        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v1.0.0</li>
