--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -451,11 +451,14 @@ material_card(
                         <button class="waves-effect waves-light btn" id="example_button" value="0">Button</button>
                         <br/>
                         <br/>
-                        <form action="#">
-                            <p>
-                                <input type="checkbox" id="example_checkbox" />
-                                <label for="example_checkbox">Checkbox</label>
-                            </p>
+                        Checkbox
+                       <form action="#">
+    <p>
+      <label>
+        <input type="checkbox" />
+        <span>Check</span>
+      </label>
+    </p>
                         </form>
                         <br/>
                         <div class="input-field">
@@ -484,21 +487,28 @@ material_card(
                     </div>
                     <div class="col s12 m2 offset-m1">
                         <br/>
-                        <form action="#" id="example_radio_button" class="shiny-material-radio-button">
-                            <label for="example_radio_button">Radio Button</label>
-                            <p>
-                                <input type="radio" name="example_radio_button" id="c" />
-                                <label for="c">Cake</label>
-                            </p>
-                            <p>
-                                <input type="radio" name="example_radio_button" id="p" />
-                                <label for="p">Pie</label>
-                            </p>
-                            <p>
-                                <input type="radio" name="example_radio_button" id="b" />
-                                <label for="b">Brownie</label>
-                            </p>
-                        </form>
+                  <form action="#">
+    Radio Buttons
+    <p>
+      <label>
+        <input name="group1" type="radio" checked />
+        <span>Chicken</span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input name="group1" type="radio" />
+        <span>Fish</span>
+      </label>
+    </p>
+    <p>
+      <label>
+        <input  name="group1" type="radio"  />
+        <span>Steak</span>
+      </label>
+    </p>
+    
+  </form>
                         <br/>
                         <form action="#">
                             <p class="range-field" id="example_slider">
