--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -510,12 +510,13 @@ material_card(
     
   </form>
                         <br/>
-                        <form action="#">
-                            <p class="range-field" id="example_slider">
-                                <label for="example_slider">Slider</label>
-                                <input type="range" min="1" max="10" value="2" />
-                            </p>
-                        </form>
+                        Slider
+ <form action="#">
+    <p class="range-field">
+      <input type="range" id="test5" min="0" max="100" />
+    </p>
+  </form>
+        
                         <br/>
                         <label for="example_switch">Switch</label>
                         <div class="switch">
