--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -1182,6 +1182,10 @@ library(shinymaterial)
         <div class='my-code-black'>
             primary_theme_color, secondary_theme_color
         </div>
+          <div class='my-code'>material_floating_button()</div>
+        <div class='my-code-black'>
+            pulse
+        </div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v1.0.0</li>
