--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -329,6 +329,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <li>
                         <a href="#features_server_side">Server Side</a>
                     </li>
+                     <li>
+                        <a href="#features_theme_colors">Theme Colors</a>
+                    </li>
 
                 </ul>
             </div>
@@ -855,8 +858,45 @@ library(shinymaterial)
                 </div>
             </div>
         </div>
-
         <!------------------------------- SERVER SIDE END ------------------------------->
+        <!------------------------------- THEME COLORS BEGIN ------------------------------->
+        <div id="features_theme_colors" class="row section scrollspy">
+                      <div class="col s10 offset-s2">
+                <h2 class='my-code' style='font-size:75px;color:black;font-weight:500'>Theme Colors</h2>
+            </div>
+                            <div class="row">
+
+                    <div class="col s12 m4 offset-m2">
+                        <pre>
+                          <code class='r'>
+material_page(
+  title = "Basic Page", 
+  primary_theme_color = "blue", 
+  secondary_theme_color = "red",
+  material_row(
+    material_column(
+      width = 12,
+      material_button("button", "Button"),
+      material_switch("switch", "", "off", "on"),
+      material_radio_button("radio", "", c("A", "B", "C"))
+    )
+  )
+)
+        </code>
+        </pre>
+                    </div>
+                                        <div class="col s12 m4 offset-m1">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="card-title"></span>
+                                <img width="100%" src="img/theme-colors.png">
+                            </div>
+                        </div>
+                    </div>
+          </div>
+          </div>
+        <!------------------------------- THEME COLORS END ------------------------------->
+        
     </div>
 
     <div class="col s12" id="showcase">
