prep for release

--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -28,27 +28,7 @@
 
 
 
-        .myh2 {
-            color: #4caf50;
-            font-weight: 700;
-        }
 
-        .tabs .tab a {
-            color: #3f51b5
-        }
-
-        .tab a.active {
-            color: #3f51b5 !important;
-        }
-
-        .tab a.hover {
-            color: #3f51b5 !important;
-        }
-
-        .tabs .indicator {
-            height: 3px;
-            background-color: #3f51b5;
-        }
 
     </style>
 </head>
@@ -57,8 +37,8 @@
 <body class="grey lighten-4">
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper indigo">
-                <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial</a></div>
+            <div class="nav-wrapper">
+                <div href="javascript:void(0)" class="brand-logo">&nbsp;&nbsp;<a href="https://cran.r-project.org/web/packages/shinymaterial/index.html" target="_blank">shinymaterial v1.1.0</a></div>
                 <div href="javascript:void(0)" class="brand-logo right">
                     <a href="https://github.com/ericrayanderson/shinymaterial" target="_blank">
                     <img style=' color: white' src='img/GitHub-Mark-Light-32px.png'>&nbsp;
@@ -906,7 +886,7 @@ material_page(
             <div class="col m4 offset-m2 s12">
          <div class="card">
                     <div class="card-content">
-                        <span class="card-title indigo-text">Dashboard</span>
+                        <span class="card-title">Dashboard</span>
                         <a href="https://ericrayanderson.shinyapps.io/shinymaterial_dashboard" target="_blank"><img src="img/shinymaterial_dashboard.png" width="100%"></a>
                     </div>
                 </div>
@@ -915,7 +895,7 @@ material_page(
                
                         <div class="card">
                     <div class="card-content">
-                        <span class="card-title indigo-text">Basic App</span>
+                        <span class="card-title">Basic App</span>
                         <a href="https://ericrayanderson.github.io/shinymaterial_showcase/" target="_blank"><img src="img/example_app2.png" width="100%"></a>
                     </div>
                 </div>
@@ -925,7 +905,7 @@ material_page(
             <div class="col m4 offset-m2 s12">
                    <div class="card">
                     <div class="card-content">
-                        <span class="card-title indigo-text">Parallax</span>
+                        <span class="card-title">Parallax</span>
                         <a href="https://ericrayanderson.github.io/shinymaterial_parallax/" target="_blank"><img src="img/parallaxSS.png" width="100%"></a>
                     </div>
                 </div>
@@ -934,7 +914,7 @@ material_page(
            <div class="col m4 s12">
                       <div class="card">
                     <div class="card-content">
-                        <span class="card-title indigo-text">Cryptocurrency</span>
+                        <span class="card-title">Cryptocurrency</span>
                         <a href="https://ericrayanderson.shinyapps.io/shinymaterial_crypto" target="_blank"><img src="img/shinymaterial_crypto.png" width="100%"></a>
                     </div>
                 </div>
